--- a/Hackathon-main/Frontend/Templates/teacher.html
+++ b/Hackathon-main/Frontend/Templates/teacher.html
@@ -415,6 +415,6 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="{{ url_for('static', filename='script.js') }}"></script>
+  <script src="script.js"></script>
 </body>
 </html>
